--- a/monterey/quickstart.mdx
+++ b/monterey/quickstart.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Monterey.js"
+title: "Quickstart"
 description: "Transform JSON into JavaScript with elegance and type safety."
 mode: "wide"
 ---
